[gd_scene load_steps=22 format=2]

[ext_resource path="res://resources/font/Arcadepix Plus.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://resources/font/SERIO___.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://offline_levels/general_scenes/game_over.tscn" type="PackedScene" id=3]
[ext_resource path="res://offline_levels/general_scenes/instructions.tscn" type="PackedScene" id=4]
[ext_resource path="res://offline_levels/general_scenes/pause.tscn" type="PackedScene" id=5]
[ext_resource path="res://resources/offline_mode_Asset/level_6/green.png" type="Texture" id=6]
[ext_resource path="res://resources/offline_mode_Asset/level_6/whiteGreen.png" type="Texture" id=7]
[ext_resource path="res://resources/offline_mode_Asset/level_6/orange.png" type="Texture" id=8]
[ext_resource path="res://resources/offline_mode_Asset/level_6/whiteOrange.png" type="Texture" id=9]
[ext_resource path="res://resources/offline_mode_Asset/level_6/rj45.png" type="Texture" id=10]
[ext_resource path="res://resources/offline_mode_Asset/level_6/brown.png" type="Texture" id=11]
[ext_resource path="res://resources/offline_mode_Asset/level_6/blue.png" type="Texture" id=12]
[ext_resource path="res://resources/offline_mode_Asset/level_6/whiteBrown.png" type="Texture" id=13]
[ext_resource path="res://resources/offline_mode_Asset/level_6/whiteBlue.png" type="Texture" id=14]
[ext_resource path="res://offline_levels/level6/slot.gd" type="Script" id=15]
[ext_resource path="res://offline_levels/level6/wire.gd" type="Script" id=16]
[ext_resource path="res://offline_levels/general_scenes/cable_crimping/manager.gd" type="Script" id=17]

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 52
extra_spacing_bottom = 28
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "animation"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}

[node name="cable_crimping" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 17 )

[node name="rj45" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 200.0
margin_top = -370.0
margin_right = 1111.0
margin_bottom = 671.0
rect_scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 10 )

[node name="slot_container" type="Control" parent="rj45"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="slot1" type="TextureRect" parent="rj45/slot_container"]
margin_left = 145.0
margin_top = 64.0
margin_right = 209.0
margin_bottom = 801.0
rect_min_size = Vector2( 33, 0 )
script = ExtResource( 15 )
type = "slot"

[node name="slot2" type="TextureRect" parent="rj45/slot_container"]
margin_left = 225.333
margin_top = 64.0
margin_right = 289.333
margin_bottom = 801.0
rect_min_size = Vector2( 33, 0 )
script = ExtResource( 15 )
type = "slot"

[node name="slot3" type="TextureRect" parent="rj45/slot_container"]
margin_left = 305.333
margin_top = 64.0
margin_right = 369.333
margin_bottom = 801.0
rect_min_size = Vector2( 33, 0 )
script = ExtResource( 15 )
type = "slot"

[node name="slot4" type="TextureRect" parent="rj45/slot_container"]
margin_left = 385.333
margin_top = 64.0
margin_right = 449.333
margin_bottom = 801.0
rect_min_size = Vector2( 33, 0 )
script = ExtResource( 15 )
type = "slot"

[node name="slot5" type="TextureRect" parent="rj45/slot_container"]
margin_left = 465.333
margin_top = 64.0
margin_right = 529.333
margin_bottom = 801.0
rect_min_size = Vector2( 33, 0 )
script = ExtResource( 15 )
type = "slot"

[node name="slot6" type="TextureRect" parent="rj45/slot_container"]
margin_left = 545.333
margin_top = 64.0
margin_right = 609.333
margin_bottom = 801.0
rect_min_size = Vector2( 33, 0 )
script = ExtResource( 15 )
type = "slot"

[node name="slot7" type="TextureRect" parent="rj45/slot_container"]
margin_left = 625.333
margin_top = 64.0
margin_right = 689.333
margin_bottom = 801.0
rect_min_size = Vector2( 33, 0 )
script = ExtResource( 15 )
type = "slot"

[node name="slot8" type="TextureRect" parent="rj45/slot_container"]
margin_left = 705.333
margin_top = 64.0
margin_right = 769.333
margin_bottom = 801.0
rect_min_size = Vector2( 33, 0 )
script = ExtResource( 15 )
type = "slot"

[node name="button_container" type="GridContainer" parent="."]
margin_left = 1270.0
margin_top = 970.0
margin_right = 1720.0
margin_bottom = 1045.0
rect_min_size = Vector2( 200, 75 )
custom_constants/hseparation = 50
columns = 2

[node name="reset" type="Button" parent="button_container"]
margin_right = 200.0
margin_bottom = 75.0
rect_min_size = Vector2( 200, 75 )
custom_fonts/font = SubResource( 3 )
text = "CLEAR"

[node name="crimp" type="Button" parent="button_container"]
margin_left = 250.0
margin_right = 450.0
margin_bottom = 75.0
rect_min_size = Vector2( 200, 75 )
custom_fonts/font = SubResource( 3 )
text = "CRIMP"

[node name="wire_container" type="HBoxContainer" parent="."]
margin_left = 100.0
margin_top = 343.0
margin_right = 962.0
margin_bottom = 1080.0
rect_min_size = Vector2( 862, 737 )
custom_constants/separation = 50

[node name="wire1" type="TextureRect" parent="wire_container"]
margin_right = 64.0
margin_bottom = 737.0
texture = ExtResource( 9 )
script = ExtResource( 16 )
type = "wire"

[node name="wire2" type="TextureRect" parent="wire_container"]
margin_left = 114.0
margin_right = 178.0
margin_bottom = 737.0
texture = ExtResource( 8 )
script = ExtResource( 16 )
type = "wire"

[node name="wire3" type="TextureRect" parent="wire_container"]
margin_left = 228.0
margin_right = 292.0
margin_bottom = 737.0
texture = ExtResource( 7 )
script = ExtResource( 16 )
type = "wire"

[node name="wire4" type="TextureRect" parent="wire_container"]
margin_left = 342.0
margin_right = 406.0
margin_bottom = 737.0
texture = ExtResource( 12 )
script = ExtResource( 16 )
type = "wire"

[node name="wire5" type="TextureRect" parent="wire_container"]
margin_left = 456.0
margin_right = 520.0
margin_bottom = 737.0
texture = ExtResource( 14 )
script = ExtResource( 16 )
type = "wire"

[node name="wire6" type="TextureRect" parent="wire_container"]
margin_left = 570.0
margin_right = 634.0
margin_bottom = 737.0
texture = ExtResource( 6 )
script = ExtResource( 16 )
type = "wire"

[node name="wire7" type="TextureRect" parent="wire_container"]
margin_left = 684.0
margin_right = 748.0
margin_bottom = 737.0
texture = ExtResource( 13 )
script = ExtResource( 16 )
type = "wire"

[node name="wire8" type="TextureRect" parent="wire_container"]
margin_left = 798.0
margin_right = 862.0
margin_bottom = 737.0
texture = ExtResource( 11 )
script = ExtResource( 16 )
type = "wire"

[node name="cable_type" type="Label" parent="."]
margin_left = 98.0
margin_top = 114.0
margin_right = 960.0
margin_bottom = 226.0
custom_fonts/font = SubResource( 4 )
text = "Wiring Standard: "
align = 1
valign = 1

[node name="popup_layer" type="CanvasLayer" parent="."]

[node name="pause" parent="popup_layer" instance=ExtResource( 5 )]
visible = false

[node name="pause_popup" parent="popup_layer/pause" index="1"]
visible = false

[node name="game_over" parent="popup_layer" instance=ExtResource( 3 )]
visible = false

[node name="instructions" parent="popup_layer" instance=ExtResource( 4 )]
visible = false

[node name="content" parent="popup_layer/instructions/main_popup" index="1"]
margin_bottom = 30.0
rect_min_size = Vector2( 900, 230 )
text = "Simply tap and hold on the file icon. While holding, drag it towards the folder that you believe is the most suitable match for the file's content. Release your finger to drop the file into the chose folder. Make strategic choices to efficiently organize your files and progress through the game's challenges. Good luck!"

[node name="AnimationPlayer" parent="popup_layer/instructions/main_popup" index="2"]
playback_speed = 0.25
anims/RESET = SubResource( 1 )
anims/animation = SubResource( 2 )

[node name="Sprite" parent="popup_layer/instructions/main_popup/AnimationPlayer" index="0"]
visible = false

[connection signal="pressed" from="button_container/reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="button_container/crimp" to="." method="_on_crimp_pressed"]

[editable path="popup_layer/pause"]
[editable path="popup_layer/pause/pause_popup"]
[editable path="popup_layer/game_over"]
[editable path="popup_layer/instructions"]
